--- a/sotmjp/static/less/site.less
+++ b/sotmjp/static/less/site.less
@@ -930,11 +930,11 @@ body.home {
     .tokyo-slideshow,
     .tokyo-slideshow:after {
       position: relative;
-      width: 800px;
-      height: 450px;
+      width: 60%;
+      height: 350px;
       z-index: 0;
       top: 0px;
-      left: 200px;
+      //left: 200px;
     }
     .tokyo-slideshow:after {
       content: '';
